# shard-os

./: .gitignore  .gitmodules  README.md  meson.build
code/: app_dice.c  app_dice.h  app_jukebox.c  app_jukebox.h  app_radio.c  app_radio.h  audio.c  audio.h  audioplayer.c  audioplayer.h  audiostreamer.c  audiostreamer.h  config.c  config.h  filebrowser.c  filebrowser.h  main.c  meson.build  screen.c  screen.h  screensaver.c  screensaver.h  ui_audio_settings.c  ui_audio_settings.h  ui_elements.c  ui_elements.h  ui_main.c  ui_main.h  ui_radio.c  ui_radio.h
resources/: radiostations.txt  shard-os.conf
resources/colorschemes/: alien.conf  cyberpunk.conf
resources/data/: radiostations.conf
resources/fonts/pasti-font/: info.txt
resources/fonts/share-tech-mono/: .uuid
resources/hooks/: on_audio_close.sh  on_audio_open.sh
